Chore: Simplify `cookies()` method by replacing `Collections.unmodifiableList(Arrays.asList())` with `List.of()`